fix(contrast): increase contrast between yellow and pink colors (#159)

--- a/sass/app.scss
+++ b/sass/app.scss
@@ -349,7 +349,7 @@ body {
     }
 
     img.photo {
-      border: #f7f300 6px solid;
+      border: #fffb3d 6px solid;
       display: inline-block;
       height: 192px;
       width: 192px;
@@ -418,7 +418,7 @@ body {
   .profile-image {
     margin: auto;
     height: 20rem;
-    border: #f7f300 6px solid;
+    border: #fffb3d 6px solid;
     display: inline-block;
     border-radius: 50%;
     margin-bottom: 24px;
@@ -671,7 +671,7 @@ body {
       }
 
       .table-title {
-        color: #f7f300;
+        color: #fffb3d;
         font-family: Prototype;
         text-transform: uppercase;
         font-size: 1.5rem;
@@ -679,7 +679,7 @@ body {
         letter-spacing: 1.2px;
         margin-bottom: 1rem;
         font-weight: bold;
-        text-shadow: 0px 0px 10px #e0209e;
+        text-shadow: 0px 0px 10px #d01b91;
       }
 
       .table-subtitle {
@@ -694,7 +694,7 @@ body {
         text-decoration: underline;
         font-family: "Robot", sans-serif;
         font-weight: bold;
-        color: #f7f300;
+        color: #fffb3d;
       }
 
       table {
@@ -739,8 +739,8 @@ body {
 
           & > td:first-child {
             padding-right: 0px;
-            color: #f7f300;
-            text-shadow: 0px 0px 10px #e0209e;
+            color: #fffb3d;
+            text-shadow: 0px 0px 10px #d01b91;
             font-family: Prototype;
             font-size: 18px;
             letter-spacing: 0.9px;
@@ -822,8 +822,8 @@ body {
         }
 
         code {
-          color: #f7f300;
-          background-color: #e0209e;
+          color: #fffb3d;
+          background-color: #d01b91;
         }
       }
 
@@ -839,7 +839,7 @@ body {
         }
 
         img.photo {
-          border: #f7f300 6px solid;
+          border: #fffb3d 6px solid;
           display: inline-block;
           height: 192px;
           width: 192px;
